--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
-    "d3": "^7.9.0",
     "framer-motion": "^11.0.25",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-spring": "^9.7.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
