--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.10",
+    "@internationalized/date": "^3.5.2",
+    "@nextui-org/react": "2.3.2",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.25",
+    "nextui-cli": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
