--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@internationalized/date": "^3.5.2",
     "@nextui-org/react": "2.3.2",
     "dayjs": "^1.11.10",
+    "firebase": "^10.11.0",
     "framer-motion": "^11.0.25",
     "nextui-cli": "^0.1.5",
     "react": "^18.2.0",
