--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open --port 8080",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "dependencies": {
     "@internationalized/date": "^3.5.2",
@@ -17,7 +17,8 @@
     "framer-motion": "^11.0.25",
     "nextui-cli": "^0.1.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
