--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "source": "/(.*)",
       "destination": "/"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "20 17 * * *"
+    }
   ]
 }
